--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,3 +1,16 @@
-<!doctype html>
-<title>Flask Server</title>
-<h1> Hello from Flask Server !</h1>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Accueil Bibliothèque</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <div class="container">
+        <h2>Gestion des profils</h2>
+        <p>Choisissez votre profil :</p>
+        <a href="{{ url_for('authentification') }}"><button>Administrateur</button></a>
+        <a href="{{ url_for('recherche_livres') }}"><button>Client</button></a>
+    </div>
+</body>
+</html>
